--- a/contact-us.html
+++ b/contact-us.html
@@ -1,165 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TasteTreasure</title>
-    <link rel="icon" href="asests/TasteTreasure.png">
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            font-family: sans-serif;
-        }
-        .navbar{
-            width: 85%;
-            margin: auto;
-            padding: 35px 0;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-        .logo{
-            width: 120px;
-            cursor: pointer;
-        }
-        .navbar ul li{
-            list-style: none;
-            display: inline-block;
-            margin: 0 40px;
-            position: relative;
-        }
-        .navbar ul li a{
-            text-decoration: none;
-            color: black;
-            text-transform: uppercase;
-        }
-        .navbar ul li::after{
-            content: '';
-            height: 3px;
-            width: 0%;
-            background-color: #AB9746;
-            position: absolute;
-            left: 0;
-            bottom: -10px;
-            transition: 0.5s;
-        }
-        .navbar ul li:hover:after{
-            width: 100%;
-        }
-        .content{
-            width: 100%;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            text-align: center;
-        }
-        .content h1{
-            font-size: 65px;
-            margin-top: 05%;
-        }
-        .content p{
-            margin: 20px auto;
-            font-weight: 100%;
-            line-height: 25px;
-        }
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin-top: 25%;
-        }
-        table{
-            margin: 0 auto;
-            border-collapse: collapse;
-            width: 80%;
-            border: 1px solid black;
-            width: 800px;
-            height: 520px;
-        }
-
-        td, th{
-            border: 1px solid black;
-            padding: 10px;
-        }
-
-        th{
-            background-color: #AB9746;
-        }
-        img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: cover;
-        }
-        .send-button {
-        background-color: #AB9746;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        font-size: 16px;
-        cursor: pointer;
-        border-radius: 5px;
-        width: 200px;
-    }
-
-    .send-button:hover {
-        background-color: #856f41;
-    }
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="icon" href="asests/TasteTreasure.png" />
+  </head>
+  <body>
     <div class="banner">
-        <div class="navbar">
-            <img src="asests/TasteTreasure.png" alt="logo" style="width: 400px;">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Recipes</a></li>
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="contact-us.html">Contact Us</a></li>
-            </ul>
-        </div><br>
-        <div class="table">
-            <table>
-                <tbody>
-                    <tr>
-                        <th style="height: 20px; text-align: center;" colspan="4"><h1>Contact Us</h1></th>
-                    </tr>
-                    <tr style="height: 40px;">
-                        <td>Name:</td>
-                        <td colspan="3"><input type="text" style="width: 600px;"></td>
-                    </tr>
-                    <tr style="height: 40px;">
-                        <td>E-mail:</td>
-                        <td colspan="3"><input type="text" style="width: 600px;"></td>
-                    </tr>
-                    <tr style="height: 40px;">
-                        <td rowspan="3">Address</td>
-                        <td>Street:</td>
-                        <td colspan="2"><input type="text" style="width: 495px;"></td>
-                    </tr>
-                    <tr style="height: 40px;">
-                        <td>City:</td>
-                        <td colspan="2"><input type="text" style="width: 495px;"></td>
-                    </tr>
-                    <tr style="height: 40px;">
-                        <td>Zip Code:</td>
-                        <td colspan="2"><input type="text" style="width: 495px;"></td>
-                    </tr>
-                    <tr style="height: 40px; text-align: left;">
-                        <th colspan="4"><strong>Type Message</strong></th>
-                    </tr>
-                    <td colspan="4"><textarea name="textArea" id="textArea" cols="130" rows="8"></textarea></td>
-                    <tr style="height: 40px;">
-                        <td colspan="4"><button type="submit" class="send-button">Send</button></td>
-                    </tr>
-                </tbody>
-                <tfoot></tfoot>
-            </table>
-        </div><br><br><br>
-    <footer style="background-color: #AB9746; color: white; text-align: center; padding: 20px;">
-        &copy; 2024 TasteTreasure. All rights reserved.
+      <div class="navbar">
+        <img src="asests/TasteTreasure.png" alt="logo" />
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="recipes.html">Recipes</a></li>
+          <li><a href="about-us.html">About Us</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="contact-container">
+      <h1>Contact Us</h1>
+      <form id="contact-form" action="#" method="post">
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required />
+        </div>
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required />
+        </div>
+        <div class="form-group">
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" rows="10" required></textarea>
+        </div>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+    <footer class="footer">
+      &copy; 2024 TasteTreasure. All rights reserved.
     </footer>
-</body>
+  </body>
 </html>
