--- a/recipes.html
+++ b/recipes.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TasteTreasure</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/recipes-style.css" />
     <link rel="icon" href="asests/TasteTreasure.png" />
   </head>
   <body>
@@ -19,17 +18,8 @@
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </div>
-      <div class="content">
-        <h1>DISCOVER DELICIOUS DELIGHTS</h1>
-        <p>
-          Explore a world of culinary wonders with Discover Delicious
-          Delights,<br />
-          your go-to destination for mouthwatering recipes and gastronomic
-          inspiration.
-        </p>
-      </div>
       <div class="container">
-        <h2>Trending Recipes</h2>
+        <h1>Recipes</h1>
         <div class="row">
           <div class="card">
             <a href="/sesame-chicken.html" target="_blank"
